# sqlite-build

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  test-build.yml  win-build.yml
