project(sqlite3)

add_library(${PROJECT_NAME} SHARED IMPORTED GLOBAL)
set_target_properties(${PROJECT_NAME} PROPERTIES INTERFACE_LINK_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
if (LT_WINDOWS)
	set(SQLITE_LIB ${CMAKE_CURRENT_SOURCE_DIR}/sqlite3.dll)
	set_target_properties(${PROJECT_NAME} PROPERTIES IMPORTED_IMPLIB ${CMAKE_CURRENT_SOURCE_DIR}/sqlite3.lib)
	set_target_properties(${PROJECT_NAME} PROPERTIES IMPORTED_LOCATION ${SQLITE_LIB})
elseif(LT_LINUX)
	set(SQLITE_LIB ${CMAKE_CURRENT_SOURCE_DIR}/libsqlite3.so)
	set_target_properties(${PROJECT_NAME} PROPERTIES IMPORTED_LOCATION ${SQLITE_LIB})
elseif(LT_MAC)
	set(SQLITE_LIB ${CMAKE_CURRENT_SOURCE_DIR}/libsqlite3.0.dylib)
	set_target_properties(${PROJECT_NAME} PROPERTIES IMPORTED_LOCATION ${SQLITE_LIB})
endif()
target_include_directories(${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

install(
	FILES
        ${SQLITE_LIB}
	DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
)